# pychirps

./: .gitignore  Makefile  README.md  pyproject.toml
.streamlit/: config.toml
app/: config.py  main.py
app/pychirps/: explanations.py  model_building.py
app/ui/: chirps_page_factory.py  data_description_factory.py  explanation_page.py  explanation_page_components.py  intro.py  streamlit_app.py
src/: config.py
src/pychirps/: explanations.py  model_building.py
tests/: conftest.py  fixture_helper.py  forest_paths_helper.py  test_data_encoding.py  test_explaining.py  test_explanations.py  test_forest_explorer.py  test_get_model.py  test_get_paths.py  test_instance_encoder.py  test_instance_wrapper.py  test_model.py  test_pattern_mining.py  test_pattern_scoring.py  test_pre_explain_predict.py  test_rule_mining.py  test_rule_utilities.py
tests/file_fixtures/: adaboost_estimator_weights_1.yaml  adaboost_estimator_weights_2.yaml  adaboost_estimator_weights_5.yaml  basic_tree_path_0.yaml  basic_tree_path_1.yaml  basic_tree_path_last.yaml  bin_centres_1.yaml  bin_centres_2.yaml  bin_centres_4.yaml  bin_centres_5.yaml  bin_centres_6.yaml  cluster_centres_1.yaml  cluster_centres_2.yaml  cluster_centres_5.yaml  cluster_centres_6.yaml  column_descriptors_cervicalb.yaml  column_descriptors_nursery.yaml  custom_sorted_patterns_cervicalb.yaml  discretized_centred_gt.yaml  discretized_centred_leq.yaml  discretized_paths.yaml  entropy_weights_cervicalb.yaml  frequent_patterns.yaml  matching_features_example_1.yaml  no_given_instance_cervicalb.yaml  no_given_instance_nursery.yaml  nodes_example_1.yaml  nodes_example_2.yaml  pattern_score_patterns_cervicalb_ada_1.yaml  pattern_score_patterns_cervicalb_ada_2.yaml  pattern_score_patterns_cervicalb_ada_5.yaml  patterns_cervicalb_hill_climb.yaml  patterns_cervicalb_hill_climb_excl_cov_weighted.yaml  (+8 more)
(+40 files in other folders)
