[tool.poetry]
name = "pychirps"
version = "0.1.0"
description = ""
authors = ["hatvalues <julian@hatvalues.org>"]
readme = "README.md"
packages = [{include = "pychirps", from = "app"}]

[tool.mypy]
warn_return_any = true  # Make certain errors into warnings
warn_unused_configs = true
strict_optional = true  # Enable strict optional checking (optional)
show_error_codes = true  # Show error codes in output
check_untyped_defs = true  # Type-check untyped function definitions
ignore_missing_imports = true  # Ignore errors on missing imports (common for third-party libs)


[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.8.2"
numpy = "^2.1.1"
pyfpgrowth = "^1.0"
imblearn = "^0.0"
scikit-learn = "^1.5.2"
ordered-set = "^4.1.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pyyaml = "^6.0.2"
types-pyyaml = "^6.0.12.20250402"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"
pylint = "^3.3.1"
data-preprocs = {path = "../data_preprocs"}
mypy = "^1.15.0"


[tool.poetry.group.ui.dependencies]
plotly = "^6.0.0"
streamlit = "^1.42.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
